[package]
name = "hello-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.68"
diesel = { version = "1.4.8", features = ["r2d2","postgres"] }